--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -65,6 +65,8 @@ task:
       - git clone --depth=1 $CL_LINK $CL_PATH
       - git clone --depth=1 $SE_LINK $SE_PATH
       - git clone --depth=1 $KT_LINK $KT_PATH
+      - rm -rf device/qcom/common
+      - git clone --depth=1 https://github.com/SatoruGojo2k23/android_device_qcom_common device/qcom/common
       - rm -rf vendor/qcom/opensource/dataservices
       - git clone --depth=1 https://github.com/SatoruGojo2k23/vendor_qcom-opensource_dataservices vendor/qcom/opensource/dataservices
       - echo "============================"
