--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -67,6 +67,8 @@ task:
       - git clone --depth=1 $KT_LINK $KT_PATH
       - rm -rf device/qcom/common
       - git clone --depth=1 https://github.com/SatoruGojo2k23/android_device_qcom_common device/qcom/common
+      - rm -rf vendor/qcom/opensource/recovery-ext/oem-recovery
+      - git clone --depth=1 https://github.com/SatoruGojo2k23/vendor_qcom-opensource_recovery-ext_oem-recovery vendor/qcom/opensource/recovery-ext/oem-recovery
       - rm -rf vendor/qcom/opensource/dataservices
       - git clone --depth=1 https://github.com/SatoruGojo2k23/vendor_qcom-opensource_dataservices vendor/qcom/opensource/dataservices
       - echo "============================"
