--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -69,6 +69,8 @@ task:
       - git clone --depth=1 https://github.com/SatoruGojo2k23/android_device_qcom_common device/qcom/common
       - rm -rf vendor/qcom/opensource/recovery-ext/oem-recovery
       - git clone --depth=1 https://github.com/SatoruGojo2k23/vendor_qcom-opensource_recovery-ext_oem-recovery vendor/qcom/opensource/recovery-ext/oem-recovery
+      - rm -rf vendor/qcom/opensource/data-ipa-cfg-mgr
+      - git clone --depth#=1 https://github.com/SatoruGojo2k23/android_vendor_qcom_opensource_data-ipa-cfg-mgr vendor/qcom/opensource/data-ipa-cfg-mgr/
       - rm -rf vendor/qcom/opensource/dataservices
       - git clone --depth=1 https://github.com/SatoruGojo2k23/vendor_qcom-opensource_dataservices vendor/qcom/opensource/dataservices
       - echo "============================"
