--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,23 +1,5 @@
 env:
-    MANIFEST: https://github.com/P-404/android_manifest -b tokui --depth=1 --no-repo-verify
-    DEVICE: RMX2020
-    OEM: realme
-    DT_LINK: https://github.com/SatoruGojo2k23/device_realme_RMX2020.git
-    DT_PATH: device/$OEM/$DEVICE
-    VT_LINK: https://github.com/SatoruGojo2k23/vendor_realme_RMX2020.git
-    VT_PATH: vendor/$OEM/$DEVICE
-    VTI_LINK: https://github.com/SatoruGojo2k23/vendor_realme_RMX2020-ims.git
-    VTI_PATH: vendor/realme/RMX2020-ims
-    CL_LINK: https://github.com/SatoruGojo2k23/proton-clang.git
-    CL_PATH: prebuilts/clang/host/linux/clang-proton
-    SE_LINK: https://github.com/SatoruGojo2k23/device_mediatek_sepolicy_vndr.git
-    SE_PATH: device/mediatek/sepolicy_vndr
-    KT_LINK: https://github.com/SatoruGojo2k23/kernel_realme_RMX2020.git
-    PLATFORM: mt6768
-    KT_PATH: kernel/$OEM/$DEVICE
-    TARGET: bacon
-    EXTRA_CMD: export SKIP_ABI_CHECKS=true
-    LUNCH_COMBO: p404_${DEVICE}-userdebug
+    DEVICE: tissot
     OUTPUT: Project-404*.zip
 
 task:
@@ -57,24 +39,10 @@ task:
       - echo "============================"
       - mkdir -p ~/work
       - cd ~/work
-      - repo init -u $MANIFEST
-      - repo sync -c -j$(nproc --all) --force-sync --no-clone-bundle --no-tags
-      - git clone --depth=1 $DT_LINK $DT_PATH
-      - git clone --depth=1 $VT_LINK $VT_PATH
-      - git clone --depth=1 $VTI_LINK $VTI_PATH
-      - git clone --depth=1 $CL_LINK $CL_PATH
-      - git clone --depth=1 $SE_LINK $SE_PATH
-      - git clone --depth=1 $KT_LINK $KT_PATH
-      - rm -rf device/qcom/common
-      - git clone --depth=1 https://github.com/SatoruGojo2k23/android_device_qcom_common device/qcom/common
-      - rm -rf vendor/qcom/opensource/recovery-ext/oem-recovery
-      - git clone --depth=1 https://github.com/SatoruGojo2k23/vendor_qcom-opensource_recovery-ext_oem-recovery vendor/qcom/opensource/recovery-ext/oem-recovery
-      - rm -rf vendor/qcom/opensource/data-ipa-cfg-mgr
-      - git clone --depth=1 https://github.com/SatoruGojo2k23/android_vendor_qcom_opensource_data-ipa-cfg-mgr vendor/qcom/opensource/data-ipa-cfg-mgr/
-      - rm -rf vendor/qcom/opensource/dataservices
-      - git clone --depth=1 https://github.com/SatoruGojo2k23/vendor_qcom-opensource_dataservices vendor/qcom/opensource/dataservices
-      - rm -rf vendor/qcom/opensource/vibrator
-      - git clone --depth=1 https://github.com/SatoruGojo2k23/android_vendor_qcom-opensource_vibrator vendor/qcom/opensource/vibrator
+      - repo init --depth=1 -u git://github.com/PixelExperience/manifest.git -b twelve || true
+       - rm -rf .repo/local_manifests || true
+      - git clone https://github.com/IdkAnythin07/local_manifest.git --depth 1 -b Pixel_exp .repo/local_manifests
+       - repo sync -c --no-clone-bundle --no-tags --optimized-fetch --prune --force-sync -j8
       - echo "============================"
       - echo "Syncing Complete!"
       - echo "============================"
@@ -84,13 +52,11 @@ task:
       - echo "Starting the Build..."
       - echo "============================"
       - cd ~/work
-      - $EXTRA_CMD
       - export USE_CCACHE=1
       - export CCACHE_EXEC=/usr/bin/ccache
       - ccache -M 50G
       - . build/envsetup.sh
-      - lunch p404_RMX2020-userdebug
-      - make bacon
+      - lunch aosp_tissot-userdebug
      
   Upload_script:
       - echo "============================"
