--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -39,7 +39,7 @@ task:
       - echo "============================"
       - mkdir -p ~/work
       - cd ~/work
-      - repo init --depth=1 -u git://github.com/PixelExperience/manifest.git -b twelve || true
+      - repo init --depth=1 --no-repo-verify -u https://github.com/PixelExperience/manifest.git -b twelve -g default,-mips,-darwin,-notdefault
       - rm -rf .repo/local_manifests || true
       - git clone https://github.com/IdkAnythin07/local_manifest.git --depth 1 -b Pixel_exp .repo/local_manifests
       - repo sync -c -j$(nproc --all) --force-sync --no-clone-bundle --no-tags
