initial xtended build

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,24 +1,22 @@
 env:
-    MANIFEST: https://github.com/P-404/android_manifest -b tokui --depth=0 --no-repo-verify
-    DEVICE: tissot
+    MANIFEST: https://github.com/Project-Xtended/manifest.git -b xt --depth=1 --no-repo-verify
+    DEVICE: sagit
     OEM: xiaomi
-    DT_LINK: https://github.com/LineageOS/android_device_xiaomi_tissot.git
-    DT_PATH: device/xiaomi/tissot
-    DTCM_LINK: https://github.com/LineageOS/android_device_xiaomi_msm8953-common.git
-    DTCM_PATH: device/xiaomi/msm8953-common
-    VT_LINK: https://gitlab.com/the-muppets/proprietary_vendor_firmware.git
-    VT_PATH: vendor/firmware
-    VTI_LINK: https://gitlab.com/the-muppets/proprietary_vendor_xiaomi.git
-    VTI_PATH: vendor/xiaomi
-    CL_LINK: https://github.com/SatoruGojo2k23/proton-clang.git
-    CL_PATH: prebuilts/clang/host/linux/clang-proton
-    SE_LINK: https://github.com/LineageOS/android_kernel_xiaomi_msm8953.git
-    SE_PATH: kernel/xiaomi/msm8953
-    PLATFORM: msm8953
+    DT_LINK: https://github.com/Sagit-A13/device_xiaomi_sagit.git
+    DT_PATH: device/xiaomi/sagit
+    DTCM_LINK: https://github.com/Sagit-A13/device_xiaomi_msm8998-common.git
+    DTCM_PATH: device/xiaomi/msm8998-common
+    VT_LINK: https://github.com/Sagit-A13/proprietary_vendor_xiaomi_sagit.git
+    VT_PATH: vendor/xiaomi/sagit
+    VTI_LINK: https://github.com/Sagit-A13/proprietary_vendor_xiaomi_msm8998-common.git
+    VTI_PATH: vendor/xiaomi/msm8998-common
+    SE_LINK: https://github.com/Sagit-A13/kernel_xiaomi_msm8998.git
+    SE_PATH: kernel/xiaomi/msm8998
+    PLATFORM: msm8998
     TARGET: bacon
     EXTRA_CMD: export SKIP_ABI_CHECKS=true
-    LUNCH_COMBO: lineage_tissot-userdebug
-    OUTPUT: Project-404*.zip
+    LUNCH_COMBO: xtended_sagit-userdebug
+    OUTPUT: Xtended*.zip
 
 task:
   name: "Setting Up, Syncing, Building and Uploading..."
@@ -39,8 +37,8 @@ task:
        - sudo apt update -y && sudo apt install git aria2 curl wget rsync zip unzip lzma cpio ccache clang -y
        - sudo apt install python3 -y
        - sudo ln -sf /usr/bin/python3 /usr/bin/python
-       - git config --global user.name "SatoruGojo98667"
-       - git config --global user.email "satorugojo67890@gmail.com"
+       - git config --global user.name "deny2311"
+       - git config --global user.email "deny2311@gmail.com"
        - git clone https://github.com/akhilnarang/scripts.git ~/scripts
        - cd ~/scripts
        - sudo bash setup/android_build_env.sh
@@ -55,18 +53,17 @@ task:
       - echo "============================"
       - echo "Syncing The Sources..."
       - echo "============================"
-      - mkdir -p ~/android/lineage
-      - cd ~/android/lineage
-      - repo init -u https://github.com/LineageOS/android.git -b lineage-18.1 --git-lfs
+      - mkdir -p ~/android/xtended
+      - cd ~/android/xtended
+      - repo init -u https://github.com/Project-Xtended/manifest.git -b xt --git-lfs
       - repo sync	  
       - git clone --depth=1 $CL_LINK $CL_PATH
       - rm -rf frameworks/base
-      - git clone -b ninihao9-new --single-branch --depth=1 https://github.com/ninihao9/android_frameworks_base.git ~/android/lineage/framework/base
-      - git clone -b lineage-18.1 --single-branch --depth=1 https://github.com/LineageOS/android_device_xiaomi_tissot.git ~/android/lineage/device/xiaomi/tissot
-      - git clone -b lineage-18.1 --single-branch --depth=1 https://github.com/LineageOS/android_device_xiaomi_msm8953-common.git ~/android/lineage/device/xiaomi/msm8953-common
-      - git clone -b lineage-18.1 --single-branch --depth=1 https://github.com/LineageOS/android_kernel_xiaomi_msm8953.git ~/android/lineage/kernel/xiaomi/msm8953
-      - git clone -b lineage-18.1 --single-branch --depth=1 https://gitlab.com/the-muppets/proprietary_vendor_firmware.git ~/android/lineage/vendor/firmware
-      - git clone -b lineage-18.1 --single-branch --depth=1 https://gitlab.com/the-muppets/proprietary_vendor_xiaomi.git ~/android/lineage/vendor/xiaomi  
+      - git clone -b xt13 --single-branch --depth=1  https://github.com/Sagit-A13/device_xiaomi_sagit.git ~/android/xtended/device/xiaomi/sagit
+      - git clone -b evox13 --single-branch --depth=1 https://github.com/Sagit-A13/device_xiaomi_msm8998-common.git ~/android/xtended/device/xiaomi/msm8998-common
+      - git clone -b lineage-20 --single-branch --depth=1 https://github.com/Sagit-A13/kernel_xiaomi_msm8998.git ~/android/xtended/kernel/xiaomi/msm8998
+      - git clone -b lineage-20 --single-branch --depth=1 https://github.com/Sagit-A13/proprietary_vendor_xiaomi_sagit.git ~/android/xtended/vendor/xiaomi/sagit
+      - git clone -b 13 --single-branch --depth=1 https://github.com/Sagit-A13/proprietary_vendor_xiaomi_msm8998-common.git ~/android/xtended/vendor/xiaomi/msm8998-common
       - echo "============================"
       - echo "Syncing Complete!"
       - echo "============================"
@@ -75,20 +72,20 @@ task:
       - echo "============================"
       - echo "Starting the Build..."
       - echo "============================"
-      - cd ~/android/lineage
+      - cd ~/android/xtended
       - $EXTRA_CMD
       - export USE_CCACHE=1
       - export CCACHE_EXEC=/usr/bin/ccache
       - ccache -M 50G
       - . build/envsetup.sh
-      - lunch lineage_tissot-userdebug
-      - make bacon
+      - lunch xtended_sagit-userdebug
+      - make xtended
      
   Upload_script:
       - echo "============================"
       - echo "Uploading the Build..."
       - echo "============================"
-      - cd ~/android/lineage
+      - cd ~/android/xtended
       - cd out/target/product/"$DEVICE"
       - ls -lh
       - pwd
