--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -31,7 +31,7 @@ task:
        - apt update
        - apt install sudo
        - DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends tzdata
-       - ln -sf /usr/share/zoneinfo/Asia/Dhaka /etc/localtime
+       - ln -sf /usr/share/zoneinfo/Asia/Jakarta /etc/localtime
        - apt-get install -y tzdata
        - dpkg-reconfigure --frontend noninteractive tzdata
        - sudo apt update -y && sudo apt install git aria2 curl wget rsync zip unzip lzma cpio ccache clang -y
@@ -48,7 +48,17 @@ task:
       - df -h
       - lsblk
       - ls -l -a -h
-  
+      - export CCACHE_DIR=~/ccache
+      - sleep 1m
+
+      - while :
+      - do
+      - ccache -s
+      - echo ''
+      - top -b -i -n 1
+      - sleep 5s
+      - done
+
   Sync_script:
       - echo "============================"
       - echo "Syncing The Sources..."
@@ -74,12 +84,19 @@ task:
       - echo "============================"
       - cd ~/android/xtended
       - $EXTRA_CMD
-      - export USE_CCACHE=1
-      - export CCACHE_EXEC=/usr/bin/ccache
-      - ccache -M 50G
       - . build/envsetup.sh
+      - export TZ=Asia/Jakarta
+      - export CCACHE_DIR=~/ccache
+      - export CCACHE_EXEC=$(which ccache)
+      - export USE_CCACHE=1
+      - ccache -M 100G -F 0
+      - ccache -o compression=true
+      - ccache -z
       - lunch xtended_sagit-userdebug
-      - make xtended
+      - make xtended -j8 &
+      - sleep 100m
+      - kill %1
+      - ccache -s
      
   Upload_script:
       - echo "============================"
